--- a/exercicio_9.html
+++ b/exercicio_9.html
@@ -17,7 +17,7 @@
     <tbody>
         <tr>
             <td>Entrada em Fahrenheit</td>
-            <td><input type="text" size="3" maxlength="3" id="F"></td>
+            <td><input type="text" size="3" maxlength="3" id="F" value="0"></td>
             <td rowspan="2"><button style="height: 50px;" onclick="converteFtoC()">Converter</button></td>
         </tr>
         <tr>
